# adobe-desktop-licensing-utilities

./: .gitattributes  .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  cross-compile.sh  rustfmt.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml
adlu-base/: Cargo.toml  README.md  build.rs
adlu-base/src/: certificate.rs  credential.rs  lib.rs  ngl.rs  signal.rs  timestamp.rs
adlu-config/: Cargo.toml
adlu-config/src/: admin.rs  lib.rs  user.rs
adlu-decoder/: Cargo.toml  README.md
adlu-decoder/src/: cli.rs  description.rs  main.rs
adlu-parse/: Cargo.toml  README.md
adlu-parse/src/: admin.rs  lib.rs  protocol.rs  user.rs
adlu-parse/src/protocol/: frl.rs  log.rs  mod.rs  named_user.rs  nul.rs  request.rs
adlu-proxy/: Cargo.toml  README.md
adlu-proxy/src/: api.rs  cache.rs  cli.rs  handlers.rs  lib.rs  logging.rs  main.rs  proxy.rs  settings.rs
adlu-proxy/src/cache/: frl.rs  log.rs  mod.rs  named_user.rs
adlu-proxy/src/proxy/: config.rs  mod.rs  plain.rs  protocol.rs
adlu-proxy/src/res/: defaults.toml  testing.toml
adlu-proxy/src/test_generators/: mod.rs
adlu-proxy/src/testing/: frl.rs  log.rs  mod.rs  named_user.rs
adlu-proxy/tests/: act_deact.rs
decoder/: Cargo.toml
decoder/src/: lib.rs
docs/: .gitignore  Adobe Desktop Licensing Utilities.md  Gemfile  _config.yml  adlu-proxy-overview.md  decoder-operation.md  decoder-overview.md  glossary.md  index.md  licensing-and-logging-overview.md  primer.md  proxy-operation.md  proxy-overview.md
frl-base/: Cargo.toml  build.rs
frl-base/src/: lib.rs  ngl.rs
frl-config/: Cargo.toml
frl-config/src/: admin.rs  lib.rs  user.rs
legacy/: Cargo.toml  build.rs
legacy/src/: client.rs  lib.rs  types.rs
legacy/src/client/: cops.rs
legacy/src/client/cops/: frl_online.rs
proxy/src/: cache.rs  cli.rs  config.rs  cops.rs  logging.rs  main.rs  proxy.rs  settings.rs
proxy/src/proxy/: mod.rs  plain.rs  secure.rs
proxy/src/res/: defaults.toml  template.toml
rsrc/Credentials/: ps-online-mac-expanded.json
rsrc/certificates/: pfx-testing-clear.key  pfx-testing.cert  pfx-testing.embedded.key  pfx-testing.key  pfx-testing.pfx
rsrc/configs/: proxy-conf.toml.adobe  proxy-conf.toml.v0-no-rotate  proxy-conf.toml.v0-rotate  proxy-conf.toml.v1-no-rotate  proxy-conf.toml.v1-rotate
rsrc/configurations/: proxy-cert.toml  proxy-http.toml  proxy-https.toml  proxy-pfx.toml
rsrc/credentials/: ps-online-mac.json
rsrc/install/ubuntu/: README.md  adlu-proxy.conf  adlu-proxy.service  install-adlu-proxy-release.sh  install-adlu-proxy-tag.sh  install.sh  nginx.conf
rsrc/install/windows/: service.ps1
rsrc/libraries/windows/: ngl.lib
rsrc/traces/: activation.chls  deactivation.chls  deactivation.chlsj  frl_activation.chlsj  nul_activation.txt  ulecs.chlsj
src/client/: descriptions.rs  types.rs
src/client/cops/: oc.rs
