[package]
name = "adlu-base"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
license = "AGPLv3"
version = "1.0.0-rc.2"
edition = "2021"

[features]
cross-compile = []

[dependencies]
base64 = "0.13"
bytes = "1"
chrono = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
eyre = "0.6"
keyring = "1"
log = "0.4"
openssl = { version = "0.10", features = ["vendored", "v111"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync"] }
