[package]
name = "adlu-config"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
eyre = "0.6.7"
if_chain = "1.0.2"
adlu-base = { path = "../adlu-base" }
glob = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
visdom = "0.5.1"
zip = "0.5.13"

[dev-dependencies]
legacy = { path = "../legacy" }

