[package]
name = "adlu-decoder"
version = "2.0.0"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
edition = "2021"
default-run = "adlu-decoder"

[[bin]]
name = "adlu-decoder"

[dependencies]
adlu-base = { path = "../adlu-base" }
adlu-config = { path = "../adlu-config" }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
eyre = "0.6.7"
glob = "0.3.0"
shellexpand = "2.1.0"
