[package]
name = "adlu-decoder"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
license = "AGPLv3"
version = "1.0.0-alpha.2"
edition = "2021"

[[bin]]
name = "adlu-decoder"

[dependencies]
adlu-base = { path = "../adlu-base" }
adlu-parse = { path = "../adlu-parse" }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
eyre = "0.6.7"
glob = "0.3.0"
shellexpand = "2.1.0"
