[package]
name = "adlu-parse"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
license = "AGPLv3"
version = "1.1.0"
edition = "2021"

[features]
parse-reponses = []

[dependencies]
adlu-base = { path = "../adlu-base" }
bytes = "1.2"
chrono = { version = "0.4", features = ["clock"] }
eyre = "0.6"
glob = "0.3"
http = "0.2"
if_chain = "1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1"
visdom = "0.5"
#warp = "0.3"
warp = { git = "https://github.com/brotskydotcom/warp", branch = "ignore-empty-path-segments", features = ["tls", "ignore-empty-path-segments"] }
zip = "0.6"
