[package]
name = "adlu-proxy"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
license = "AGPLv3"
version = "1.0.0-alpha.1"
edition = "2021"

[features]
parse_responses = ["adlu-parse/parse-reponses"]

[dependencies]
adlu-base = { path = "../adlu-base" }
adlu-parse = { path = "../adlu-parse" }
bytes = "1.1"
chrono = "0.4"
clap = { version = "3.1", features = ["derive"] }
config = "0.13"
ctrlc = { version = "3.1", features = ["termination"] }
dialoguer = "0.8"
eyre = "0.6"
headers = "0.3.4"
http = "0.2"
log = "0.4"
log4rs = { version="1.1", features = ["gzip"] }
openssl-probe = "0.1.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.0", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite" ] }
sys-info = "0.7.0"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
toml = "0.5.9"
url = "2.1.1"
warp = { version = "0.3.2", features = ["tls"] }

[dev-dependencies]
uuid = { version = "1.1", features = ["v5"]}
