[package]
name = "adlu-proxy"
authors = ["Daniel Brotsky <dan@clickonetwo.io>"]
description = "A protocol-aware, caching, store/forward reverse proxy for Adobe desktop licensing servers"
license = "AGPLv3"
version = "1.1.0-rc.1"
edition = "2021"

[features]
parse_responses = ["adlu-parse/parse-reponses"]

[dependencies]
adlu-base = { path = "../adlu-base" }
adlu-parse = { path = "../adlu-parse" }
anyhow = "1"    # needed for log4rs trigger definition
bytes = "1.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
config = "0.13"
ctrlc = { version = "3.1", features = ["termination"] }
csv = "1"
dialoguer = "0.10"
eyre = "0.6"
headers = "0.3.4"
http = "0.2"
log = "0.4"
log4rs = { version="1.1.1", features = ["gzip", "background_rotation"] }
openssl-probe = "0.1.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite" ] }
sys-info = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
toml = "0.5.9"
url = "2.1.1"
#warp = { version = "0.3.2", features = ["tls"] }
warp = { git = "https://github.com/brotskydotcom/warp", branch = "ignore-empty-path-segments", features = ["tls", "ignore-empty-path-segments"] }

[dev-dependencies]
uuid = { version = "1.1", features = ["v4"]}
lazy_static = "1.4"
tempfile = "3"
