[package]
name = "decoder"
version = "2.0.0"
authors = ["Andrew Dorton <adorton@adobe.com>", "Daniel Brotsky <dan@clickonetwo.io>"]
edition = "2021"
default-run = "adobe-license-decoder"

[[bin]]
name = "adobe-license-decoder"

[dependencies]
adlu-base = { path = "../adlu-base" }
adlu-config = { path = "../adlu-config" }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
eyre = "0.6.7"
glob = "0.3.0"
shellexpand = "2.1.0"
