[package]
name = "legacy"
version = "1.5.0"
authors = ["Daniel Brotsky <dbrotsky@adobe.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
eyre = "0.6.5"
adlu-base = { path = "../adlu-base" }
glob = "0.3.0"
keyring = "1"
num-traits = "0.2.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.9.5"
shellexpand = "2.0.0"
structopt = { version = "0.3.21", features = ["wrap_help"] }
visdom = "0.4.0"
zip = "0.5.11"
